<resources>
    <string name="app_name">Basic Calculator</string>
    <string name="clear">Clear</string>
    <string name="divide_symbol">/</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="multiply_symbol">*</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="subtract_symbol">-</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="add_symbol">+</string>
    <string name="digit_0">0</string>
    <string name="decimal_point">.</string>
    <string name="equal_sign">=</string>
</resources>
